# Algorithms-and-data-structure

Fifth project/: Mod.txt
Fifth project/Mod1/: main_rpn_t  main_rpn_t.cpp  rpn_t.hpp
Fifth project/Mod10/: data_rpn_t_1.txt  dll_node_t.hpp  dll_t.hpp  main.exe.stackdump  main_rpn_t  makefile  queue_l_t.hpp  rpn_t.hpp  stack_l_t.hpp
Fifth project/Mod11/: dll_t.hpp  main_rpn_t.cpp  queue_l_t.hpp  rpn_t.hpp
Fifth project/Mod2/: main_rpn_t  queue_l_t.hpp
Fifth project/Mod3/: main_rpn_t  rpn_t.hpp  stack_l_t.hpp
Fifth project/Mod4/: main_rpn_t  queue_l_t.hpp  rpn_t.hpp  stack_l_t.hpp
Fifth project/Mod5/: main_rpn_t  rpn_t.hpp  (+2 more)
First practice/: main  main_rational_t  main_rational_t.cpp  makefile  rational_t.cpp  rational_t.hpp
First project/: main  rational_t.hpp
Fourth project/: main_sparse_matrix_t  main_sparse_matrix_t.cpp  makefile  sparse_matrix_t.hpp  sparse_vector_t.hpp
Fourth project/Modificacion/: CMakeLists.txt  dll_node_t.hpp  main_sparse_matrix_t.cpp  pair_t.hpp  sparse_matrix_t.hpp  sparse_vector_t.hpp
Fourth project/Normal/: CMakeLists.txt  main_sparse_matrix_t  main_sparse_matrix_t.cpp  sparse_matrix_t.hpp  sparse_vector_t.hpp
Second practice/: Pr2.url  main  main_p2.cpp  makefile  matrix_t.hpp  rational_t.cpp  rational_t.hpp  vector_t.hpp
Second project/: data.txt  dataM.txt  main_p2  main_p2.cpp  main_p2M.cpp  makefile  matrix_t.hpp  rational_t.cpp  rational_t.hpp  vector_t.hpp
Sixth project/: Mod.txt  maze_t.cpp
Third project/: main_sparse_vector_t  main_sparse_vector_t.cpp  makefile  pair_t.hpp  sparse_vector_t.hpp  vector_t.hpp
(+74 files in other folders)
